fix: fix broken css
Ref. #46

--- a/apps/front-end/front-office/src/app/components/quiz-view/game-answer/game-answer.component.scss
+++ b/apps/front-end/front-office/src/app/components/quiz-view/game-answer/game-answer.component.scss
@@ -3,6 +3,7 @@
   border-radius: 20px;
   margin: 15px;
   min-width: 500px;
+  cursor: pointer;
 }
 
 .button > p {
