--- a/apps/front-end/front-office/src/app/components/quiz/quiz-list-item/quiz-list-item.component.scss
+++ b/apps/front-end/front-office/src/app/components/quiz/quiz-list-item/quiz-list-item.component.scss
@@ -1,16 +1,12 @@
-.list-item {
+.quiz-list-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
 }
 
-.list-item-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 20%;
-  height: 12%;
+.quiz-list-item {
+  width: 100%;
+  margin: 10px;
 }
